# apis

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  gazelle_for_googleapis.patch  go.mod  go.sum
cmd/: BUILD.bazel  greetings.go  main.go
proto/hello_world/: BUILD.bazel  hello_world.proto
