load("@gazelle//:def.bzl", "gazelle")  #
#load("@buildifier_prebuilt//:rules.bzl", "buildifier")

### gazelle:prefix github.com/abitofhelp/apis# gazelle:exclude bazel-*
# gazelle:exclude binding
# gazelle:exclude deployment
# gazelle:exclude dist
# gazelle:exclude security
# gazelle:exclude vendor
gazelle(name = "gazelle")

#gazelle(
#    name = "gazelle-update-repos",
#    args = [
#        "-from_file=go.mod",
#        "-to_macro=deps.bzl%go_dependencies",
#        "-prune",
#        "-build_file_proto_mode=disable_global",
#    ],
#    command = "update-repos",
#)
