module(
    name = "apis",
    version = "5.5.0-rc1",
    compatibility_level = 1,
)

bazel_dep(
    name = "gazelle",
    version = "0.34.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "rules_go",
    version = "0.43.0",
    #repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "grpc",
    version = "1.48.1",
)
bazel_dep(
    name = "protobuf",
    version = "21.7",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture.
go_sdk.download(version = "1.21.3")

# Register the go.mod file with the go_deps extension.
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Register the Go SDK installed on the host.
go_sdk.host()
