module(
    name = "apis",
    version = "5.5.0-rc1",
    compatibility_level = 1,
)

bazel_dep(name = "grpc", version = "1.48.1", dev_dependency = True)
bazel_dep(name = "protobuf", version = "21.7", dev_dependency = True, repo_name = "com_google_protobuf")  #"3.19.2"
bazel_dep(name = "rules_go", version = "0.43.0", dev_dependency = True)
bazel_dep(name = "rules_proto", version = "6.0.0-rc1", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.3")

# Register the Go SDK installed on the host.
go_sdk.host()

bazel_dep(name = "gazelle", version = "0.34.0", dev_dependency = True)  #, repo_name = "bazel_gazelle")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    #"com_github_gogo_protobuf",
    #"com_github_golang_mock",
    #"com_github_golang_protobuf",
    #"org_golang_google_genproto",
    "org_golang_google_grpc",
    #"org_golang_google_protobuf",
    #"org_golang_x_net",
    #"org_golang_x_tools",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_protobuf",
)

#git_override(
#    module_name = "gazelle",
#    remote = "https://github.com/bazelbuild/bazel-gazelle.git",
#    commit = "850e219",
#    patches = ["gazelle_for_googleapis.patch"],
#)

#GOOGLE_APIS_VERSION = "64926d52febbf298cb82a8f472ade4a3969ba922"
#
#bazel_dep(name = "com_google_googleapis", version = GOOGLE_APIS_VERSION)
#archive_override(
#    module_name = "com_google_googleapis",
#    integrity = "sha256-nRqTDnZ8k8glOYuPhpLso/41O5qq3t+88fyiKCyF34g=",
#    patch_strip = 1,
#    patches = [
#        "add_bzlmod_support.patch"
#    ],
#    strip_prefix = "googleapis-" + GOOGLE_APIS_VERSION,
#    urls = [
#        "https://github.com/googleapis/googleapis/archive/%s.zip" % GOOGLE_APIS_VERSION
#    ],
#)
#
#switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
#switched_rules.use_languages()
#use_repo(switched_rules, "com_google_googleapis_imports")
