load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hello_world_proto",
    srcs = ["hello_world.proto"],
    visibility = ["//visibility:public"],
    deps = [
        #"//google/api:annotations_proto",
        "@googleapis//google/api:annotations_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "hello_world_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/abitofhelp/apis/proto/hello_world",
    proto = ":hello_world_proto",
    visibility = ["//visibility:public"],
    #deps = ["//google/api:annotations_proto"],
)

go_library(
    name = "hello_world",
    embed = [":hello_world_go_proto"],
    importpath = "github.com/abitofhelp/apis/proto/hello_world",
    visibility = ["//visibility:public"],
)
